# notebooks

./: .gitattributes  .gitignore  .gitmodules  .vscode  Makefile  Pandas Groupby Examples 2.ipynb  Pandas Groupby Examples 3.ipynb  Pandas Groupby Examples.ipynb  Performance scipy.sparse examples.ipynb  README.md  ai.sh  bc.py  c.py  caches.py  clean.sh  code_server.sh  db.py  env.sh  env_setup.sh  find_bad_gitignore.sh  find_large_dirs.py  git_checkout_master_pull_all_submodules.sh  git_checkout_master_pull_all_submodules_parallel.sh  git_checkout_master_push_all_submodules.sh  git_checkout_master_push_all_submodules_parallel.sh  git_clean.sh  git_gc_all_recursive.sh  git_list_submodules_recursive.sh  git_remove_submodule.sh  git_show_ignored.sh  list_submodules.sh  notebook.sh  pandas scipy.sparse (with groupby) timiing.ipynb  pandas scipy.sparse performance.ipynb  pyrightconfig.json  pyspark_ipython.sh  tboard.sh  whois
.github/: dependabot.yml
advice/: README.md
agent-tui/: Makefile
agentsview/: Makefile  ops.yaml
aider/: Makefile
airflow/: .gitignore  env.sh  setup.sh
alpaca/: do.py
antigravity/: Makefile
api/: .gitignore  README.md
async/: README.md  concurrent_example.py  delay.py  example.py  sem.py  thread_example.py
awesome_markdown_enrich/: Makefile  README.md  get_date_latest_commit.bash  get_info.sh  get_links.sh  info.csv  info.md  sort_file.sh  to_markdown.py
aws/: Makefile
backlogmd/: Makefile
baddag/: baddag.py
beam/: do.py
cuda/: try  (+2 more)
rust/maturin_test_pyo3/: Cargo.toml  pyproject.toml
rust/maturin_test_pyo3/src/: lib.rs
(+1657 files in other folders)
